--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "os-key",
   "version": "0.0.1",
   "description": "Get the right modifier keys depending on your system",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && rollup -c"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/elifitch/os-key/issues"
   },
-  "homepage": "https://github.com/elifitch/os-key#readme"
+  "homepage": "https://github.com/elifitch/os-key#readme",
+  "devDependencies": {
+    "rollup": "^0.56.5",
+    "rollup-plugin-buble": "^0.19.2"
+  },
+  "dependencies": {}
 }
