--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "os-key",
   "version": "0.0.1",
   "description": "Get the right modifier keys depending on your system",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "command key",
+    "ctrl key",
+    "alt key",
+    "user-agent",
+    "key"
+  ],
   "main": "./dist/index.js",
   "scripts": {
     "build": "rm -rf dist && rollup -c"
@@ -18,7 +28,8 @@
   "homepage": "https://github.com/elifitch/os-key#readme",
   "devDependencies": {
     "rollup": "^0.56.5",
-    "rollup-plugin-buble": "^0.19.2"
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "dependencies": {}
 }
